--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         kotlin_version = '1.3.31'
         anko_version = '0.8.2'
         gson_version = '2.4'
+        picasso_version = '2.5.0'
     }
     repositories {
         google()
